Don't register WebKitWeightWatcher fonts

Registering many fonts causes a probelm. We don't register them at
this moment.

BUG=http://webkit.org/b/50709
TEST=LayoutTests/fast/css/font-weight-1.html
Review URL: http://codereview.chromium.org/6287039

git-svn-id: svn://svn.chromium.org/chrome/trunk/src@73378 0039d316-1c4b-4281-b951-d872f2087c98

Former-commit-id: 00c1fc7aa82783a1f24ea55922990ee38e041e35