webkit/support/platform_support_mac.mm
@@ -114,15 +114,8 @@ void AfterInitialize(bool unit_test_mode) {
   // Load font files in the resource folder.
   static const char* const fontFileNames[] = {
       "AHEM____.TTF",
-      "WebKitWeightWatcher100.ttf",
-      "WebKitWeightWatcher200.ttf",
-      "WebKitWeightWatcher300.ttf",
-      "WebKitWeightWatcher400.ttf",
-      "WebKitWeightWatcher500.ttf",
-      "WebKitWeightWatcher600.ttf",
-      "WebKitWeightWatcher700.ttf",
-      "WebKitWeightWatcher800.ttf",
-      "WebKitWeightWatcher900.ttf",
+      // We don't register WebKitWeightWather fonts because of
+      // webkit.org/b/50709.
   };
 
   NSString* resources = [[NSBundle mainBundle] resourcePath];
